Updating About the team page

--- a/base/templates/base/About-the-Team.html
+++ b/base/templates/base/About-the-Team.html
@@ -13,12 +13,12 @@
     <meta name="generator" content="Nicepage 4.17.10, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i|Oswald:200,300,400,500,600,700|Oswald:200,300,400,500,600,700">
-    
-    
-    
-    
-    
-    
+
+
+
+
+
+
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
@@ -178,9 +178,7 @@
                     <h4 class="u-custom-font u-font-oswald u-text u-text-17">Naomi Suzuki</h4>
                     <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-18">Programmer (back-end)</h4>
                     <p class="u-text u-text-19">
-                      <span style="font-weight: 400;"> A</span>
-                      <span style="font-weight: 400;"><b>
-                          <span style="font-weight: 400;">n undergraduate student at the University of Toronto, double majoring in Computer Science and Molecular Genetics. Her interests include software development and web design.&nbsp;</span></b>
+                      <span style="font-weight: 400;"> An undergraduate student at the University of Toronto, double majoring in Computer Science and Molecular Genetics. Her interests include software development and web design.&nbsp;</span></b>
                       </span>
                     </p><span class="u-file-icon u-icon u-icon-6" data-href="{% static 'https://www.linkedin.com/in/naomi-suzuki/' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
@@ -194,8 +192,7 @@
                     <h4 class="u-custom-font u-font-oswald u-text u-text-20"> Zannatul S. Isaque</h4>
                     <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-21">Historical Researcher (<b>Bengali)</b>
                     </h4>
-                    <p class="u-text u-text-22"> An&nbsp;<b>
-                        <span style="font-weight: 400;">undergraduate historical researcher at the University of Toronto. A deep interest in the intersection of science and history, has led her to major in Mathematics and the History and Philosophy of Science and Technology</span>.</b>
+                    <p class="u-text u-text-22"> An&nbsp;undergraduate historical researcher at the University of Toronto. A deep interest in the intersection of science and history, has led her to major in Mathematics and the History and Philosophy of Science and Technology</span>.</b>
                     </p><span class="u-file-icon u-icon u-icon-7" data-href="{% static 'https://www.linkedin.com/in/zannatul-s-isaque/' %}" data-target="_blank"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
@@ -205,9 +202,9 @@
               <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-15">
                 <div class="u-container-style u-group u-shape-rectangle u-group-8">
                   <div class="u-container-layout u-container-layout-16">
-                    <h4 class="u-custom-font u-font-oswald u-text u-text-23">Rue</h4>
-                    <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-24">Programmer (front-end)</h4>
-                    <p class="u-text u-text-25">Description:</p><span class="u-file-icon u-icon u-icon-8" data-href="{% static 'mailto:lexsciasia@gmail.com' %}" data-target="_blank"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
+                    <h4 class="u-custom-font u-font-oswald u-text u-text-23">Rue Sriharsha</h4>
+                    <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-24">Webmaster</h4>
+                    <p class="u-text u-text-25">An undergraduate student at the University of Toronto majoring in Computational Cognitive Science major and double minoring in Computer Science and Statistics. Her interests include ethical and accessible technology, particularly in Artificial Intelligence, poetry and improving education on current technologies. She contributed to the design and development of the website.</p><span class="u-file-icon u-icon u-icon-8" data-href="{% static 'https://www.linkedin.com/in/ruesriharsha' %}" data-target="_blank"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -322,11 +319,11 @@
         </div>
       </div>
     </section>
-    
-    
+
+
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-1cd6"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1"> Website Designed by University of Toronto Student Team&nbsp;</p>
       </div></footer>
-  
-  
+
+
 </body></html>
