--- a/base/templates/base/About-the-Team.html
+++ b/base/templates/base/About-the-Team.html
@@ -204,7 +204,7 @@
                   <div class="u-container-layout u-container-layout-16">
                     <h4 class="u-custom-font u-font-oswald u-text u-text-23">Rue Sriharsha</h4>
                     <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-24">Webmaster</h4>
-                    <p class="u-text u-text-25">An undergraduate student at the University of Toronto majoring in Computational Cognitive Science major and double minoring in Computer Science and Statistics. Her interests include ethical and accessible technology, particularly in Artificial Intelligence, poetry and improving education on current technologies. She contributed to the design and development of the website.</p><span class="u-file-icon u-icon u-icon-8" data-href="{% static 'https://www.linkedin.com/in/ruesriharsha' %}" data-target="_blank"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
+                    <p class="u-text u-text-25">An undergraduate student at the University of Toronto majoring in Computational Cognitive Science major and double minoring in Computer Science and Statistics. Her interests include ethical and accessible technology, particularly in Artificial Intelligence, poetry and improving education on current technologies. </p><span class="u-file-icon u-icon u-icon-8" data-href="{% static 'https://www.linkedin.com/in/ruesriharsha' %}" data-target="_blank"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -217,17 +217,6 @@
                     <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-27">Historical Researcher (​Vietnamese)</h4>
                     <p class="u-text u-text-28">An undergraduate student at the Univeristy of Toronto majoring in Psychology and Computational Cognition. Her interests include polylingualism and computational linguistics.&nbsp;<br>
                     </p><span class="u-file-icon u-icon u-icon-9" data-href="{% static 'mailto:lexsciasia@gmail.com' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-19">
-                <div class="u-container-style u-group u-shape-rectangle u-group-10">
-                  <div class="u-container-layout u-container-layout-20">
-                    <h4 class="u-custom-font u-font-oswald u-text u-text-29">Name</h4>
-                    <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-30">Programmer</h4>
-                    <p class="u-text u-text-31">Description:</p><span class="u-file-icon u-icon u-icon-10" data-href="{% static 'mailto:lexsciasia@gmail.com' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -248,37 +237,14 @@
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-23">
-                <div class="u-container-style u-group u-shape-rectangle u-group-12">
-                  <div class="u-container-layout u-container-layout-24">
-                    <h4 class="u-custom-font u-font-oswald u-text u-text-35">Name</h4>
-                    <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-36">Programmer</h4>
-                    <p class="u-text u-text-37">Description:</p><span class="u-file-icon u-icon u-icon-12" data-href="{% static 'mailto:lexsciasia@gmail.com' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-25">
                 <div class="u-container-style u-group u-shape-rectangle u-group-13">
                   <div class="u-container-layout u-container-layout-26">
                     <h4 class="u-custom-font u-font-oswald u-text u-text-38">Zaheen Noor</h4>
                     <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-39">Historical Researcher (Bengali)</h4>
                     <p class="u-text u-text-40"> An&nbsp;<b>
-                        <span style="font-weight: 400;">u</span>
-                        <span style="font-weight: 400;">ndergraduate student at the University of Toronto, double majoring in Global Health and Psychology. Her interests include research on South Asian communities, as well as sensory perception.&nbsp;</span></b>
+                        <span style="font-weight: 400;">undergraduate student at the University of Toronto, double majoring in Global Health and Psychology. Her interests include research on South Asian communities, as well as sensory perception.&nbsp;</span></b>
                     </p><span class="u-file-icon u-icon u-icon-13" data-href="{% static 'https://www.linkedin.com/in/zaheen-noor-234b4822a/' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-27">
-                <div class="u-container-style u-group u-shape-rectangle u-group-14">
-                  <div class="u-container-layout u-container-layout-28">
-                    <h4 class="u-custom-font u-font-oswald u-text u-text-41">Name</h4>
-                    <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-42">Programmer</h4>
-                    <p class="u-text u-text-43">Description:</p><span class="u-file-icon u-icon u-icon-14" data-href="{% static 'mailto:lexsciasia@gmail.com' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
               </div>
