--- a/base/templates/base/About-the-Project.html
+++ b/base/templates/base/About-the-Project.html
@@ -13,9 +13,9 @@
     <meta name="generator" content="Nicepage 4.17.10, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i|Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
-    
-    
-    
+
+
+
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
@@ -96,15 +96,14 @@
                   <p class="u-custom-font u-font-lato u-text u-text-2">
                     <span style="font-weight: 400;"><b style="">
                         <span style="font-weight: 400;">Th</span>
-                        <span style="font-weight: 400;">e Lexicon of Science in Asia aims to enable new transregional and comparative research in the history and sociology of science by helping scholars discover t</span>
-                        <span style="font-weight: 400;">ranslation histories for scientific terms and concepts. It is a fully searchable, multilingual database of scientific terms in Asian languages spoken across the continent, from the Eastern Mediterranean to the Pacific Ocean, d</span>
-                        <span style="font-weight: 400;">esigned to bridge gaps in regional language expertise and improve our understanding about how scientific knowledge and technology have been disseminated, translated, and adapted across different parts of Asia. The completed Lexicon will include scholarly commentary on each scientific term’s changing meanings over time in each language, as well as embedded hyperlinks to historical primary sources </span>
+                        <span style="font-weight: 400;">e Lexicon of Science in Asia aims to enable new transregional and comparative research in the history and sociology of science by helping scholars discover </span>
+                        <span style="font-weight: 400;">translation histories for scientific terms and concepts. It is a fully searchable, multilingual database of scientific terms in Asian languages spoken across the continent, from the Eastern Mediterranean to the Pacific Ocean, </span>
+                        <span style="font-weight: 400;">designed to bridge gaps in regional language expertise and improve our understanding about how scientific knowledge and technology have been disseminated, translated, and adapted across different parts of Asia. The completed Lexicon will include scholarly commentary on each scientific term’s changing meanings over time in each language, as well as embedded hyperlinks to historical primary sources </span>
                         <span style="font-weight: 400;">demonstrating word usage, bibliographies of secondary scholarship for further analysis of scientific and cultural contexts, and cross-references to other relevant terms and etymologies.</span></b>
                     </span>
                     <br>
                     <br><b>
-                      <span style="font-weight: 400;">The Lexicon is the brainchild of an <a href="https://www.chstm.org/content/science-across-regions-asia" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">international working group on the History of Science in Asia</a>&nbsp;hosted by the Consortium for the History of Science, Technology, and Medicine since 2019.&nbsp;The Lexicon is currently beginning its pilot stage based at the Institute for the History and Philosophy of Science and Technology at the University of Toronto, supported by the Connaught Fund. Subsequently, it will scale up to include the contributions of all scholars interested in participating
-                      </span>.</b>
+                      <span style="font-weight: 400;">The Lexicon is the brainchild of an <a href="https://www.chstm.org/content/science-across-regions-asia" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">international working group on the History of Science in Asia</a>&nbsp;hosted by the Consortium for the History of Science, Technology, and Medicine since 2019.&nbsp;The Lexicon is currently beginning its pilot stage based at the Institute for the History and Philosophy of Science and Technology at the University of Toronto, supported by the Connaught Fund. Subsequently, it will scale up to include the contributions of all scholars interested in participating.</span></b>
                     <br>
                   </p>
                   <a href="{% url 'contact' %}" data-page-id="89173319" class="u-border-none u-btn u-button-style u-palette-4-dark-2 u-btn-2">Learn More</a>
@@ -115,11 +114,11 @@
         </div>
       </div>
     </section>
-    
-    
+
+
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-1cd6"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1"> Website Designed by University of Toronto Student Team&nbsp;</p>
       </div></footer>
-    
-  
+
+
 </body></html>
