Updated news page

--- a/base/templates/base/About-the-Project.html
+++ b/base/templates/base/About-the-Project.html
@@ -95,8 +95,7 @@
                   <h2 class="u-text u-text-1"> About LSA</h2>
                   <p class="u-custom-font u-font-lato u-text u-text-2">
                     <span style="font-weight: 400;"><b style="">
-                        <span style="font-weight: 400;">Th</span>
-                        <span style="font-weight: 400;">e Lexicon of Science in Asia aims to enable new transregional and comparative research in the history and sociology of science by helping scholars discover </span>
+                        <span style="font-weight: 400;">The Lexicon of Science in Asia aims to enable new transregional and comparative research in the history and sociology of science by helping scholars discover </span>
                         <span style="font-weight: 400;">translation histories for scientific terms and concepts. It is a fully searchable, multilingual database of scientific terms in Asian languages spoken across the continent, from the Eastern Mediterranean to the Pacific Ocean, </span>
                         <span style="font-weight: 400;">designed to bridge gaps in regional language expertise and improve our understanding about how scientific knowledge and technology have been disseminated, translated, and adapted across different parts of Asia. The completed Lexicon will include scholarly commentary on each scientific term’s changing meanings over time in each language, as well as embedded hyperlinks to historical primary sources </span>
                         <span style="font-weight: 400;">demonstrating word usage, bibliographies of secondary scholarship for further analysis of scientific and cultural contexts, and cross-references to other relevant terms and etymologies.</span></b>
