--- a/base/templates/base/News.html
+++ b/base/templates/base/News.html
@@ -12,7 +12,7 @@
     <script class="u-script" type="text/javascript" src="{% static 'js/nicepage.js' %}" "="" defer=""></script>
     <meta name="generator" content="Nicepage 4.17.10, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-    
+
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
@@ -70,12 +70,13 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-      </div></header> 
-    
-    
+      </div></header>
+
+    <h2 class="u-text u-text-1"> About LSA</h2>
+
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-1cd6"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1"> Website Designed by University of Toronto Student Team&nbsp;</p>
       </div></footer>
-    
-  
+
+
 </body></html>
