--- a/base/templates/base/News.html
+++ b/base/templates/base/News.html
@@ -72,7 +72,7 @@
         </nav>
       </div></header>
 
-    <h2 class="u-text u-text-1"> About LSA</h2>
+    <h3 class="construction-title"> This page is under construction</h3>
 
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-1cd6"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1"> Website Designed by University of Toronto Student Team&nbsp;</p>
