--- a/base/static/base/News.css
+++ b/base/static/base/News.css
@@ -1,3 +1,12 @@
 .construction-title{
     text-align: center;
 }
+
+/* Position text in the middle */
+.middle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
