--- a/base/static/base/News.css
+++ b/base/static/base/News.css
@@ -10,3 +10,12 @@
     transform: translate(-50%, -50%);
     text-align: center;
 }
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
+}
