--- a/base/templates/base/About-the-Team.html
+++ b/base/templates/base/About-the-Team.html
@@ -99,7 +99,7 @@
                   <p class="u-align-left u-text u-text-palette-1-base u-text-2">Project leader</p>
                   <p class="u-text u-text-3">Assistant Professor at the Institute for the History and Philosophy of Science and Technology.<br>She is a historian of the life sciences in the modern Middle East, specializing in genetics, evolutionary biology, physical anthropology, and medicine during the twentieth and twenty-first centuries. She is the author of <a href="{% static 'https://www.sup.org/books/title/?id=31687' %}" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-1" target="_blank">Genetic Crossroads: The Middle East and the Science of Human Heredity</a> (Stanford University Press, 2021). Her latest project examines scientific connections between the Middle East and South and East Asia. Tentatively called “Race Across Asia,” this project traces the flow of scientific ideas and research practices surrounding race and nationalism between Japan, India, Iran, and Turkey, looking specifically at the fields of medical genetics, forensic fingerprinting, and archaeology.
                   </p>
-                  <a href="{% static 'https://www.ihpst.utoronto.ca/people/directories/all-faculty/elise-burton' %}" class="u-btn u-button-style u-btn-2" target="_blank">More Information</a>
+                  <a href="https://www.ihpst.utoronto.ca/people/directories/all-faculty/elise-burton" class="u-btn u-button-style u-btn-2" target="_blank">More Information</a>
                 </div>
               </div>
             </div>
