--- a/base/templates/base/Under-Construction.html
+++ b/base/templates/base/Under-Construction.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>News</title>
+    <title>Under Construction</title>
     <link rel="stylesheet" href="{% static 'css/nicepage.css' %}" media="screen">
-    <link rel="stylesheet" href="{% static 'base/News.css' %}" media="screen">
+    <link rel="stylesheet" href="{% static 'base/Under-Construction.css' %}" media="screen">
     <script class="u-script" type="text/javascript" src="{% static 'js/jquery.js' %}" "="" defer=""></script>
     <script class="u-script" type="text/javascript" src="{% static 'js/nicepage.js' %}" "="" defer=""></script>
     <meta name="generator" content="Nicepage 4.17.10, nicepage.com">
