--- a/base/templates/base/About-the-Team.html
+++ b/base/templates/base/About-the-Team.html
@@ -154,7 +154,7 @@
                     <p class="u-text u-text-13">An undergraduate student at thte University of Toronto&nbsp;<b>
                         <span style="font-weight: 400;">d</span>
                         <span style="font-weight: 400;">ouble majoring in Computer Science and History &amp; Philosophy of Science &amp; Technology. Her interests include digital humanities and narratology.&nbsp;</span></b>
-                    </p><span class="u-file-icon u-icon u-icon-4" data-href="https://www.linkedin.com/in/rachel-xie-503971210/"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
+                    </p><span class="u-file-icon u-icon u-icon-4" data-href="https://www.linkedin.com/in/rachel-xie-503971210/" data-target="_blank"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -180,7 +180,7 @@
                     <p class="u-text u-text-19">
                       <span style="font-weight: 400;"> An undergraduate student at the University of Toronto, double majoring in Computer Science and Molecular Genetics. Her interests include software development and web design.&nbsp;</span></b>
                       </span>
-                    </p><span class="u-file-icon u-icon u-icon-6" data-href="https://www.linkedin.com/in/naomi-suzuki/"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
+                    </p><span class="u-file-icon u-icon u-icon-6" data-href="https://www.linkedin.com/in/naomi-suzuki/" data-target="_blank"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -244,7 +244,7 @@
                     <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-39">Historical Researcher (Bengali)</h4>
                     <p class="u-text u-text-40"> An&nbsp;<b>
                         <span style="font-weight: 400;">undergraduate student at the University of Toronto, double majoring in Global Health and Psychology. Her interests include research on South Asian communities, as well as sensory perception.&nbsp;</span></b>
-                    </p><span class="u-file-icon u-icon u-icon-13" data-href="https://www.linkedin.com/in/zaheen-noor-234b4822a/"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
+                    </p><span class="u-file-icon u-icon u-icon-13" data-href="https://www.linkedin.com/in/zaheen-noor-234b4822a/" data-target="_blank"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
               </div>
