--- a/base/templates/base/About-the-Team.html
+++ b/base/templates/base/About-the-Team.html
@@ -166,7 +166,7 @@
                     <h4 class="u-custom-font u-font-oswald u-text u-text-14">Maryam Mohammad&nbsp;</h4>
                     <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-15">Historical Researcher (Urdu)</h4>
                     <p class="u-text u-text-16">An undergraduate student at the University of Toronto Mississauga. With a double major in Sociology and Women, Gender and Sexuality Studies, and a minor in South Asian Humanities, their interests include obsreving the world around her.&nbsp;<br>
-                    </p><span class="u-file-icon u-icon u-icon-5" data-href="{% static 'mailto:lexsciasia@gmail.com' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
+                    </p><span class="u-file-icon u-icon u-icon-5" data-href="{% url 'contact' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -216,7 +216,7 @@
                     <h4 class="u-custom-font u-font-oswald u-text u-text-26">Fiona Hoang</h4>
                     <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-27">Historical Researcher (​Vietnamese)</h4>
                     <p class="u-text u-text-28">An undergraduate student at the Univeristy of Toronto majoring in Psychology and Computational Cognition. Her interests include polylingualism and computational linguistics.&nbsp;<br>
-                    </p><span class="u-file-icon u-icon u-icon-9" data-href="{% static 'mailto:lexsciasia@gmail.com' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
+                    </p><span class="u-file-icon u-icon u-icon-9" data-href="{% url 'contact' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -231,7 +231,7 @@
                       <span style="font-weight: 400;">A</span>
                       <span style="font-weight: 400;">n&nbsp;</span><b>
                         <span style="font-weight: 400;">undergraduate at the University of Toronto majoring in Economics and Public Policy with a focus on Data Analytics. His interests include equitable policy development, history of race in South Asia as well as South Asian poetry and Sufism.</span>&nbsp;</b>
-                    </p><span class="u-file-icon u-icon u-icon-11" data-href="{% static ' mailto:lexsciasia@gmail.com' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
+                    </p><span class="u-file-icon u-icon u-icon-11" data-href="{% url 'contact' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -276,7 +276,7 @@
                   <div class="u-container-layout u-container-layout-4">
                     <h4 class="u-custom-font u-font-oswald u-text u-text-5">Zaheer MacDonald</h4>
                     <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-6">Programmer</h4>
-                    <p class="u-text u-text-7"> An undergraduate student at the University of Toronto majoring in Cognitive Science and the History and Philosophy of ScienceHis academic interests include philosophies of biology and mind, and the intersecting history of scientific development, colonialism, and 19th century Middle Eastern geopolitics.&nbsp;</p><span class="u-file-icon u-icon u-icon-2" data-href="{% static 'mailto:lexsciasia@gmail.com' %}" data-target="_blank" title="About the Project"><img src="{% static 'images/174857.png' %}" alt=""></span>
+                    <p class="u-text u-text-7"> An undergraduate student at the University of Toronto majoring in Cognitive Science and the History and Philosophy of ScienceHis academic interests include philosophies of biology and mind, and the intersecting history of scientific development, colonialism, and 19th century Middle Eastern geopolitics.&nbsp;</p><span class="u-file-icon u-icon u-icon-2" data-href="{% url 'contact' %}" data-target="_blank" title="About the Project"><img src="{% static 'images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
               </div>
