--- a/base/templates/base/Technical-Information.html
+++ b/base/templates/base/Technical-Information.html
@@ -13,9 +13,9 @@
     <meta name="generator" content="Nicepage 4.17.10, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i">
-    
-    
-    
+
+
+
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
@@ -87,7 +87,7 @@
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
                 <h3 class="u-text u-text-black u-text-default u-text-1">Citation Style Used</h3>
                 <p class="u-text u-text-black u-text-2">
-                  <a href="{% static 'https://www.chicagomanualofstyle.org/tools_citationguide/citation-guide-1.html' %}" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-1" target="_blank"> Chicago Manual of Style</a>&nbsp;<br>(notes-bibliography)
+                  <a href="https://www.chicagomanualofstyle.org/tools_citationguide/citation-guide-1.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-1" target="_blank"> Chicago Manual of Style</a>&nbsp;<br>(notes-bibliography)
                 </p>
               </div>
             </div>
@@ -109,30 +109,30 @@
           <div class="u-container-layout u-container-layout-4">
             <h2 class="u-custom-font u-font-roboto-condensed u-text u-text-7"> Romanization Styles Used</h2>
             <ul class="u-align-left u-custom-item u-text u-text-8">
-              <li>Arabic: <a href="{% static 'https://ijmes.uark.edu/author-resources/' %}" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-2" target="_blank"> International Journal of Middle East Studies</a>
+              <li>Arabic: <a href="https://ijmes.uark.edu/author-resources/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-2" target="_blank"> International Journal of Middle East Studies</a>
               </li>
-              <li>Bengali: <a href="{% static 'https://www.loc.gov/catdir/cpso/roman.html' %}" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-3" target="_blank">ALA-Library of Congress</a>
+              <li>Bengali: <a href="https://www.loc.gov/catdir/cpso/roman.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-3" target="_blank">ALA-Library of Congress</a>
               </li>
-              <li>Chinese:<a href="{% static 'https://www.archchinese.com/chinese_pinyin.html' %}" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-4" target="_blank"> Hanyu Pinyin</a>
+              <li>Chinese:<a href="https://www.archchinese.com/chinese_pinyin.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-4" target="_blank"> Hanyu Pinyin</a>
               </li>
-              <li>Japanese: <a href="{% static 'https://www.library.ucla.edu/sites/default/files/ealj010.pdf' %}" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-5" target="_blank">Modified Hepburn</a>
+              <li>Japanese: <a href="https://www.library.ucla.edu/sites/default/files/ealj010.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-5" target="_blank">Modified Hepburn</a>
               </li>
-              <li>Korean: <a href="{% static 'https://www.korean.go.kr/front_eng/roman/roman_01.do' %}" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-6" target="_blank">Revised Romanization of Korean</a> (developed by the National Academy of the Korean Language)
+              <li>Korean: <a href="https://www.korean.go.kr/front_eng/roman/roman_01.do" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-6" target="_blank">Revised Romanization of Korean</a> (developed by the National Academy of the Korean Language)
               </li>
-              <li>Persian: <a href="{% static 'https://www.loc.gov/catdir/cpso/roman.html' %}" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-7" target="_blank">ALA-Library of Congress</a>
+              <li>Persian: <a href="https://www.loc.gov/catdir/cpso/roman.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-7" target="_blank">ALA-Library of Congress</a>
               </li>
-              <li>Urdu: <a href="{% static 'https://www.loc.gov/catdir/cpso/roman.html' %}" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-8" target="_blank">ALA-Library of Congress</a>
+              <li>Urdu: <a href="https://www.loc.gov/catdir/cpso/roman.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-8" target="_blank">ALA-Library of Congress</a>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </section>
-    
-    
+
+
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-1cd6"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1"> Website Designed by University of Toronto Student Team&nbsp;</p>
       </div></footer>
 
-  
+
 </body></html>
