--- a/base/templates/base/Contact.html
+++ b/base/templates/base/Contact.html
@@ -83,7 +83,7 @@
         <h2 class="u-text u-text-default u-text-1">Contact Us</h2>
         <div class="u-form u-form-1">
 <!--    THIS IS THE START OF THE POINT WHERE I'M MESSING WITH STUFF-->
-            <form action="" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
+            <form action="{% url 'contact' %}" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
 <!--          <form action="//publish.nicepage.com/Form/Process" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">-->
               {% csrf_token %}
             <div class="u-form-group u-form-name u-label-none">
@@ -106,8 +106,9 @@
             </div>
 <!--  THIS IS THE END OF THE POINT WHERE I AM MESSING WITH STUFF-->
             <div class="u-align-left u-form-group u-form-submit">
-              <a href="{% static '#' %}" class="u-btn u-btn-submit u-button-style">Submit</a>
-              <input type="submit" value="submit" class="u-form-control-hidden">
+              <button type="submit" class="u-btn u-btn-submit u-button-style">Submit</button>
+              <!-- <a href="" class="u-btn u-btn-submit u-button-style">Submit</a> -->
+              <!-- <input type="submit" value="Submit" class="u-form-control-hidden"> -->
             </div>
             <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
             <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
