--- a/base/templates/base/Contact.html
+++ b/base/templates/base/Contact.html
@@ -83,7 +83,7 @@
         <h2 class="u-text u-text-default u-text-1">Contact Us</h2>
         <div class="u-form u-form-1">
 <!--    THIS IS THE START OF THE POINT WHERE I'M MESSING WITH STUFF-->
-            <form action="{% url 'contact' %}" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
+            <form action="" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
 <!--          <form action="//publish.nicepage.com/Form/Process" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">-->
               {% csrf_token %}
             <div class="u-form-group u-form-name u-label-none">
