fixed more errors

--- a/base/templates/base/About.html
+++ b/base/templates/base/About.html
@@ -101,8 +101,8 @@
               <div class="u-align-left u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-3">
                 <div class="u-container-layout u-container-layout-3">
                   <h2 class="u-text u-text-5">ABOUT THE TEAM&nbsp;</h2>
-                  <p class="u-text u-text-6">Our Project Leader is Dr. Elise K. Burton, who is an assistant professor at the University of Toronto. Our team has a webmaster, Zaheeer MacDonald, and 8 other contributors. </p>
-                  <a href="{% url 'about_team'}" data-page-id="1204909553" class="u-btn u-button-style u-palette-1-base u-btn-3">LEARN MORE</a>
+                  <p class="u-text u-text-6">Our Project Leader is Dr. Elise K. Burton, who is an assistant professor at the University of Toronto. Our team has a webmaster, Rue Sriharsha, and other programmers and historical researchers who have contributed to the project. </p>
+                  <a href="{% url 'about_team' %}" data-page-id="1204909553" class="u-btn u-button-style u-palette-1-base u-btn-3">LEARN MORE</a>
                 </div>
               </div>
             </div>
