--- a/base/templates/base/Contact.html
+++ b/base/templates/base/Contact.html
@@ -81,8 +81,13 @@
     <section class="u-align-center u-clearfix u-section-2" id="sec-dd00">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h2 class="u-text u-text-default u-text-1">Contact Us</h2>
+        <!-- TEMPORARY MESSAGE START -->
+        <div>
+          <p class="u-text u-text-default u-text-1">Our contact page is currently under construction. Please email us at <b>lexsciasia@gmail.com</b>!</p>
+        </div>
+        <!-- TEMPORARY MESSAGE END -->
+        <!-- START OF FORM  -->
         <div class="u-form u-form-1">
-<!--    THIS IS THE START OF THE POINT WHERE I'M MESSING WITH STUFF-->
             <form action="" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
 <!--          <form action="//publish.nicepage.com/Form/Process" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">-->
               {% csrf_token %}
@@ -104,7 +109,6 @@
 <!--              <label for="message-3b9a" class="u-label">Message</label>-->
 <!--              <textarea placeholder="Enter your message" rows="4" cols="50" id="message-3b9a" name="message" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required=""></textarea>-->
             </div>
-<!--  THIS IS THE END OF THE POINT WHERE I AM MESSING WITH STUFF-->
             <div class="u-align-left u-form-group u-form-submit">
               <button type="submit" class="u-btn u-btn-submit u-button-style">Submit</button>
               <!-- <a href="" class="u-btn u-btn-submit u-button-style">Submit</a> -->
@@ -116,6 +120,7 @@
             <input type="hidden" name="formServices" value="853f76987b6832c8b7af6f1b3d72b7a9">
           </form>
         </div>
+        <!-- END OF FORM  -->
       </div>
     </section>
     
