commented out form

--- a/base/templates/base/Contact.html
+++ b/base/templates/base/Contact.html
@@ -87,39 +87,39 @@
         </div>
         <!-- TEMPORARY MESSAGE END -->
         <!-- START OF FORM  -->
-        <div class="u-form u-form-1">
-            <form action="" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
+        <!-- <div class="u-form u-form-1">
+            <form action="" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form"> -->
 <!--          <form action="//publish.nicepage.com/Form/Process" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">-->
-              {% csrf_token %}
+              <!-- {% csrf_token %}
             <div class="u-form-group u-form-name u-label-none">
-                {{ form.user_name.label }}
+                {{ form.user_name.label }} -->
 <!--              <label for="name-3b9a" class="u-label">Name</label>-->
 <!--              <input type="text" placeholder="Enter your Name" id="name-3b9a" name="name" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">-->
-                {{ form.user_name }}
+                <!-- {{ form.user_name }}
             </div>
             <div class="u-form-email u-form-group u-label-none">
                 {{ form.user_address.label }}
-                {{ form.user_address }}
+                {{ form.user_address }} -->
 <!--              <label for="email-3b9a" class="u-label">Email</label>-->
 <!--              <input type="email" placeholder="Enter a valid email address" id="email-3b9a" name="email" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">-->
-            </div>
+            <!-- </div>
             <div class="u-form-group u-form-message u-label-none">
                 {{ form.user_message.label }}
-                {{ form.user_message }}
+                {{ form.user_message }} -->
 <!--              <label for="message-3b9a" class="u-label">Message</label>-->
 <!--              <textarea placeholder="Enter your message" rows="4" cols="50" id="message-3b9a" name="message" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required=""></textarea>-->
-            </div>
+            <!-- </div>
             <div class="u-align-left u-form-group u-form-submit">
-              <button type="submit" class="u-btn u-btn-submit u-button-style">Submit</button>
+              <button type="submit" class="u-btn u-btn-submit u-button-style">Submit</button> -->
               <!-- <a href="" class="u-btn u-btn-submit u-button-style">Submit</a> -->
               <!-- <input type="submit" value="Submit" class="u-form-control-hidden"> -->
-            </div>
+            <!-- </div>
             <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
             <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
             <input type="hidden" value="" name="recaptchaResponse">
             <input type="hidden" name="formServices" value="853f76987b6832c8b7af6f1b3d72b7a9">
           </form>
-        </div>
+        </div> -->
         <!-- END OF FORM  -->
       </div>
     </section>
