Fixed spacing  error in About the team page

--- a/base/templates/base/About-the-Team.html
+++ b/base/templates/base/About-the-Team.html
@@ -228,9 +228,7 @@
                     <h4 class="u-custom-font u-font-oswald u-text u-text-32">Muhammad Bilal Raza</h4>
                     <h4 class="u-custom-font u-text u-text-font u-text-palette-1-base u-text-33">Historical Researcher (Urdu)</h4>
                     <p class="u-text u-text-34">
-                      <span style="font-weight: 400;">A</span>
-                      <span style="font-weight: 400;">n&nbsp;</span><b>
-                        <span style="font-weight: 400;">undergraduate at the University of Toronto majoring in Economics and Public Policy with a focus on Data Analytics. His interests include equitable policy development, history of race in South Asia as well as South Asian poetry and Sufism.</span>&nbsp;</b>
+                        <span style="font-weight: 400;">An undergraduate at the University of Toronto majoring in Economics and Public Policy with a focus on Data Analytics. His interests include equitable policy development, history of race in South Asia as well as South Asian poetry and Sufism.</span>&nbsp;</b>
                     </p><span class="u-file-icon u-icon u-icon-11" data-href="{% url 'contact' %}"><img src="{% static 'base/images/174857.png' %}" alt=""></span>
                   </div>
                 </div>
